--- a/index.html
+++ b/index.html
@@ -11,14 +11,17 @@
     <!-- Font Awesome -->
     <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"
       integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
-
-    
-
     <title>Evaluation-website</title>
 
     <style>
+      body{
+        background-color: #8DB197;
+      }
       .container{
         width: 900px;
+      }
+      .table{
+        background-color: rgba(255, 255, 255, 0.2); 
       }
       img {
         width: 100%;
@@ -26,8 +29,7 @@
       h1{
         text-align: center;
         color: #fff;
-        background-color: #8DB197;
-        padding: 10px;
+        margin: 10px;
       }
       thead th{
         font-size: 20px;
@@ -48,9 +50,7 @@
 
     <div class="container mt-5">
       <h1>Evaluation-website</h1>
-      <div id="data-panel">
-        <!-- print dynamic data here-->
-      </div>
+      <div id="data-panel"></div>
     </div>
     
 
